<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/info"
        android:orderInCategory="1"
        android:title="Info"
        android:contentDescription="Info"
        app:showAsAction="always"
        android:icon="@drawable/ic_info"/>
</menu>