<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/share"
        android:orderInCategory="1"
        android:title="Edit"
        app:showAsAction="always"
        android:icon="@drawable/ic_share"/>
    <item android:id="@+id/delete"
        android:orderInCategory="1"
        android:title="Add"
        app:showAsAction="always"
        android:icon="@drawable/ic_delete"/>
</menu>